--- a/index.html
+++ b/index.html
@@ -21,28 +21,32 @@ Pages
            </thead><tbody>
                <tr><td>
                    <div>
-                       <a href="./src/Pagea.html"></a>a</a>
+                       <a href="./src/Pagea.html">Pagea</a>
                    </div>
                    <div>
-                       <a href="./src/Pageb.html"></a>b</a>
+                       <a href="./src/Pageb.html">Pageb</a>
                    </div><div>
-                   <a href="./src/Pagec.html"></a>c</a>
+                   <a href="./src/Pagec.html">Pagec</a>
                </div><div>
-               <a href="./src/Paged.html"></a>d</a>
+               <a href="./src/Paged.html">Paged</a>
            </div><div>
-           <a href="./src/Pagee.html"></a>e</a>
+           <a href="./src/Pagee.html">Pagee</a>
        </div><div>
-       <a href="./src/Pageg.html"></a>g</a>
+       <a href="./src/Pageg.html">Pageg</a>
+
+
    </div><div>
-   <a href="./src/Pageh.html"></a>h</a>
+   <a href="./src/Pageh.html">Pageh</a>
 </div><div>
-<a href="./src/Pagei.html"></a>i</a>
+<a href="./src/Pagei.html">Pagei</a>
+
+
 </div>
 <div>
-    <a href="./src/tribute.html"></a>Tribute</a>
+    <a href="./src/tribute.html">Tribute</a>
     </div>
     <div>
-        <a href="./src/Survey_form.html"></a>Survey</a>
+        <a href="./src/Survey_form.html">Survey</a>
         </div>
                </td></tr>
 
