--- a/src/pagek.html
+++ b/src/pagek.html
@@ -131,7 +131,7 @@
 <div><a ref="noopener noreferrer" href="https://www.w3schools.com" target="blank">Target blank</a></div>
 <div><a href="#news">News</a></div>  
 <div>
-    <a rel="noopener noreferrer" href="D:\htmlrepo\angular-node\images\food.jpg" download="tiger">tiger</a>
+    <a rel="noopener noreferrer" href="..\images\food.jpg" download="Food">Food</a>
 </div>  
 </body>
 </html>
