--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <a href="./src/grand-child-frame.html"> Grand Child Frame</a>
                         </div>
                         <div>
-                            <a href="./src/product_landing_page.html"> Product Landing Page</a>
+                            <a href="./src/stationary_product_launching.html"> Stationary Product Launching</a>
                         </div>
                         <div>
                             <a href="./src/menu-product.html"> Menu Product</a>
