--- a/src/menu-about.html
+++ b/src/menu-about.html
@@ -25,7 +25,10 @@
                         <a href="tel:+6385300519">0122237800</a>
     <div id="About" align="center"></div>
     <div align="left">
-        <input type="button" onclick="window.location.href='product_landing_page.html';">Back</input></div>
+        <a href ="pen_product_launching.html">Home</a>
+        
+
+        </div>
         <hr color="purple">
         <h1 align="center">About Us</h1>
         <img src="../images/pencil.jpg" alt="Company" width="1300" height="600"><br>
@@ -50,6 +53,7 @@
             <p align="center">The company believes in continuous improvement of the<br> process and the maximum utilization of the inputs <br>to prevent degradations of the environment.<br>All ingredients used by the company are non-toxic<br> in nature.Wood being one of the main inputs for <br>pencils,the company ensures to develop plantations and <br>reneval of this precious natural resourse.</p>
             <hr color="purple">
     <div align="left">
-        <input type="button" onclick="window.location.href='product_landing_page.html';">Back</input></div>
+        <a href ="pen_product_launching.html">Home</a>
+    </div>
 </body>
 </html>
