--- a/src/menu-contact.html
+++ b/src/menu-contact.html
@@ -25,11 +25,12 @@
         <nav align="right">
     <div id="Contact" align="center">
         <div align="left">
-        <input type="button" onclick="window.location.href='product_landing_page.html';">Back</input></div>
+            <a href ="pen_product_launching.html">Home</a>
+        
         <hr color="purple">
 
-        <h1>Contact</h1>
-        <address>
+        <h1 align="center">Contact</h1>
+        <address align="center">
             Naughty Students Stationery Shop,<br>
             10.A,Star Sheet,<br>
             Tuticorin,<br>
@@ -40,6 +41,6 @@
         </address>
      </div>
      <hr color="purple"><div align="left">
-        <input type="button" onclick="window.location.href='product_landing_page.html';">Back</input></div>
+        </div>
 </body>
 </html>
