--- a/src/csslessons/page9.html
+++ b/src/csslessons/page9.html
@@ -17,12 +17,18 @@
     <ul>
         <li>HTML</li>
         <li>CSS</li>
-        <span>
+        <ol>
             <li>DBMS</li>
-        </span>
+            <li>RDBMS</li>
+            <li>My SQL</li>
+
+        </ol>
         <li class="item">JS</li>
         <li id="list-items">BOOTSTRAP</li>
     </ul>
+    <ol>
+        <li>Just a book outsides the list</li>
+    </ol>
     <div class="container">
         <input placeholder="email address" type="email" name="email" value="your mail id">
         <input type="date">
