--- a/index.html
+++ b/index.html
@@ -182,6 +182,33 @@
                         <div>
                             <a href="./src/csslessons/page20.css">CSS Lessons:Page 20 css</a>
                         </div>
+                        <div>
+                            <a href="./src/csslessons/page21.html">CSS Lessons:Page 21</a>
+                        </div>
+                        <div>
+                            <a href="./src/csslessons/page22.html">CSS Lessons:Page 22</a>
+                        </div>
+                        <div>
+                            <a href="./src/csslessons/page23.html">CSS Lessons:Page 23</a>
+                        </div>
+                        <div>
+                            <a href="./src/csslessons/page24.html">CSS Lessons:Page 24</a>
+                        </div>
+                        <div>
+                            <a href="./src/csslessons/page25.css">CSS Lessons:Page 25 css</a>
+                        </div>
+                        <div>
+                            <a href="./src/csslessons/page26.html">CSS Lessons:Page 26</a>
+                        </div>
+                        <div>
+                            <a href="./src/csslessons/page27.css">CSS Lessons:Page 27 css</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/qr.css">QR code css</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/qr_code.html">QR code</a>
+                        </div>
                     </td>
                 </tr>
 
