--- a/index.html
+++ b/index.html
@@ -209,6 +209,12 @@
                         <div>
                             <a href="./frontend_mentor/css/qr_code.html">QR code</a>
                         </div>
+                        <div>
+                            <a href="./frontend_mentor/css/nft_preview.css">NFT Preview code CSS</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/nft_preview.html">NFT Preview code</a>
+                        </div>
                     </td>
                 </tr>
 
