--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
                         <div>
                             <a href="./frontend_mentor/css/nft_preview.html">NFT Preview code</a>
                         </div>
+                        <div>
+                            <a href="./frontend_mentor/css/order_summary.html">Order Summary</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/order_summary.css">Order Summary Css</a>
+                        </div>
                     </td>
                 </tr>
 
