--- a/frontend_mentor/css/order_summary.html
+++ b/frontend_mentor/css/order_summary.html
@@ -29,12 +29,12 @@
     <span class="img_mus"><img src="../image_frontend/icon-music.svg"></span>
     <span class="text"><b>Annual Plan</b><br>
         $59.99/year
-      </span><span class="change"> Change</span>
+      </span><a class="change" href="www.example.com"> Change</a>
   </div>
   <br>
-  <div class="payment">Proceed to Payment</div>
-  <br>
-  <div class="cancel">Cancel Order</div>
+  <button class="payment" type="button" onclick="">Proceed to Payment</button>
+  <div><br></div>
+  <button class="cancel" type="button" onclick="">Cancel Order</button>
 </main>
 </div>
 
