--- a/frontend_mentor/css/nft_preview.html
+++ b/frontend_mentor/css/nft_preview.html
@@ -18,8 +18,15 @@
   
     <p class="text2">Our Equilibrium collection promotes balance and calm.</p>
   
-    <span id="text3" style="text-align: left;">0.041 ETH</span><span class="text4" style="text-align: right;">3 days left</span>
+    <span id="text3">0.041 ETH</span><span class="text4">3 days left</span>
     <hr>
-    <footer class="footer"><img class="pic" src="../image_frontend/image-avatar.png" alt="Avatar"><span name="footer" style="color: hsl(220, 15%, 55%);">Creation of</span><span name="footer1" style="color: white;">Jules Wyvern</span></footer>
+    <footer class="footer">
+      <table>
+        <tr>
+            <th scope="col"><img class="pic" src="../image_frontend/image-avatar.png" alt="Avatar"></th>
+            <th scope="col"><span name="footer" style="color: hsl(220, 15%, 55%);">Creation of</span><span name="footer1" style="color: white;">Jules Wyvern</span></footer>
+</th>
+        </tr>
+</table>
 </div></main>
   </body></html>
