--- a/index.html
+++ b/index.html
@@ -221,6 +221,18 @@
                         <div>
                             <a href="./frontend_mentor/css/order_summary.css">Order Summary Css</a>
                         </div>
+                        <div>
+                            <a href="./frontend_mentor/css/testimonials.html">Testimonial Grid Section</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/testimonial.css">Testimonial Grid Section Css</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/fylo-data-storage.html">Fylo Data Storage component master</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/fylo-data-strorage.css">Fylo Data Storage component master Css</a>
+                        </div>
                     </td>
                 </tr>
 
