--- a/frontend_mentor/css/fylo.html
+++ b/frontend_mentor/css/fylo.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   
   <title>Frontend Mentor | Fylo data storage component</title>
   <link rel="stylesheet" href="fylo.css">
