--- a/index.html
+++ b/index.html
@@ -225,13 +225,19 @@
                             <a href="./frontend_mentor/css/testimonials.html">Testimonial Grid Section</a>
                         </div>
                         <div>
-                            <a href="./frontend_mentor/css/testimonial.css">Testimonial Grid Section Css</a>
+                            <a href="./frontend_mentor/css/testimonial.css">Testimonial Grid Section CSS</a>
                         </div>
                         <div>
                             <a href="./frontend_mentor/css/fylo.html">Fylo Data Storage component master</a>
                         </div>
                         <div>
-                            <a href="./frontend_mentor/css/fylo.css">Fylo Data Storage component master Css</a>
+                            <a href="./frontend_mentor/css/fylo.css">Fylo Data Storage component master CSS</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/clipboard.html">Clipboard Landing Page Master</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/clipboard.css">Clipboard Landing Page Master CSS</a>
                         </div>
                     </td>
                 </tr>
