--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
                         <div>
                             <a href="./frontend_mentor/css/clipboard.css">Clipboard Landing Page Master CSS</a>
                         </div>
+                        <a href="./frontend_mentor/css/chat.html">Chat App</a>
+                        </div>
+                        <div>
+                            <a href="./frontend_mentor/css/chat.css">Chat App CSS</a>
+                        </div>
                     </td>
                 </tr>
 
