--- a/index.html
+++ b/index.html
@@ -239,11 +239,14 @@
                         <div>
                             <a href="./frontend_mentor/css/clipboard.css">Clipboard Landing Page Master CSS</a>
                         </div>
+                        <div>
                         <a href="./frontend_mentor/css/chat.html">Chat App</a>
                         </div>
                         <div>
                             <a href="./frontend_mentor/css/chat.css">Chat App CSS</a>
                         </div>
+                        <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.html">Huddle Landing Page With  Alternating Feature Blocks Master</a></div>
+                        <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.css">Huddle Landing Page With  Alternating Feature Blocks Master  CSS</a></div>
                     </td>
                 </tr>
 
