--- a/frontend_mentor/css/huddle_landing_blocks.html
+++ b/frontend_mentor/css/huddle_landing_blocks.html
@@ -33,40 +33,66 @@
                     </button>
                 </div>
                 <div class="box2"><img src="../image_frontend/illustration-mockups.svg" class="image"></div>
-            </div><div class="third">
-                <div class="left"><h2>Grow Together</h2><p> Generate meaningful discussions with your audience and build a strong, loyal community. 
-                    Think of the insightful conversations you miss out on with a feedback form. 
-                  </p></div>
+            </div>
+            <div class="third">
+                <div class="left" align="left">
+                    <h2>Grow Together</h2>
+                    <p> Generate meaningful discussions with your audience and build a strong, loyal community.
+                        Think of the insightful conversations you miss out on with a feedback form.
+                    </p>
+                </div>
                 <div class="right"><img src="../image_frontend/illustration-grow-together.svg" class="pic"></div>
             </div>
             <div class="four">
                 <div class="left4"><img src="../image_frontend/illustration-flowing-conversation.svg" class="pic"></div>
-                <div class="right4"><h2>Flowing Conversations</h2><p>You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-                    have just-in-time loading for a more natural flow.</p></div>
+                <div class="right4" align="left">
+                    <h2>Flowing Conversations</h2>
+                    <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads
+                        have just-in-time loading for a more natural flow.</p>
+                </div>
             </div>
             <div class="five">
-                <div class="left"><h2>Your Users</h2><p> It takes no time at all to integrate Huddle with your app's authentication solution. 
-                    This means, once signed in to your app, your users can start chatting immediately.
-                  </p></div>
+                <div class="left" align="left">
+                    <h2>Your Users</h2>
+                    <p> It takes no time at all to integrate Huddle with your app's authentication solution.
+                        This means, once signed in to your app, your users can start chatting immediately.
+                    </p>
+                </div>
                 <div class="right"><img src="../image_frontend/illustration-your-users.svg" class="pic"></div>
             </div>
-            
+
             <footer>
                 <div class="six">
                     <h2>Ready To Build Your Community?</h2>
                     <button class="start" type="button" onclick="">
                         Get Started For Free
-    
+
                     </button>
                 </div>
-            <div class="boxes">
-                <div class="foot"><h2>Huddle</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua</p><address>+1-543-123-4567<br>
-                        example@huddle.com</address></div>
-                <div class="foot"><a href="">About Us</a><br><a href=""> What We Do</a><br><a href="">FAQ</a></div>
-                <div class="foot"><a href="">Career</a><br><a href=""> Blog</a><br><a href="">Contact Us </a></div></div>
-                <div class="foot"><p>&copy; Copyright 2018 Huddle. All rights reserved</p></div></div>
+                <div class="boxes">
+                    <div class="foot">
+                        <h2>Huddle</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua</p>
+                        <address>+1-543-123-4567<br>
+                            example@huddle.com</address>
+                    </div>
+                    <div class="foot"><a href="">About Us</a><br><a href=""> What We Do</a><br><a href="">FAQ</a></div>
+                    <div class="foot"><a href="">Career</a><br><a href=""> Blog</a><br><a href="">Contact Us </a></div>
+
+                    <div class="foot">
+                        <div class="new">
+                            <div><img class="icon" src="../image_frontend/icon-facebook.svg"></div>
+                            <div><img class="icon" src="../image_frontend/icon-twitter.svg"></div>
+                            <div><img class="icon" src="../image_frontend/icon-instagram.svg"></div>
+                        </div>
+                    </div>
+                </div>
             </footer>
+            <div class="foot">
+                <p>&copy; Copyright 2018 Huddle. All rights reserved</p>
+            </div>
+        </div>
     </main>
 
 </body>
