--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         </div>
                         <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.html">Huddle Landing Page With  Alternating Feature Blocks Master</a></div>
                         <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.css">Huddle Landing Page With  Alternating Feature Blocks Master  CSS</a></div>
-                        <div> <a href ="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With  Alternating Feature Curve Master</a></div>
+                        <div> <a href ="./frontend_mentor/css/huddle_landing_curve.html">Huddle Landing Page With  Alternating Feature Curve Master</a></div>
                         <div> <a href ="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With  Alternating Feature Curve Master  CSS</a></div>
                     </td>
                 </tr>
