stats_preview_card

--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@
                         <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.css">Huddle Landing Page With  Alternating Feature Blocks Master  CSS</a></div>
                         <div> <a href ="./frontend_mentor/css/huddle_landing_curve.html">Huddle Landing Page With  Alternating Feature Curve Master</a></div>
                         <div> <a href ="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With  Alternating Feature Curve Master  CSS</a></div>
+                        <div> <a href ="./frontend_mentor/css/stats_preview_card.html">Stats Preview Card</a></div>
+                        <div> <a href ="./frontend_mentor/css/stats_preview_card.css">Stats Preview Card CSS</a></div>
+
                     </td>
                 </tr>
 
