--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
                         <div> <a href ="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With  Alternating Feature Curve Master  CSS</a></div>
                         <div> <a href ="./frontend_mentor/css/stats_preview_card.html">Stats Preview Card</a></div>
                         <div> <a href ="./frontend_mentor/css/stats_preview_card.css">Stats Preview Card CSS</a></div>
+                        <div> <a href ="./frontend_mentor/css/three_column_preview_card.html">3 Column Preview Card</a></div>
+                        <div> <a href ="./frontend_mentor/css/three_column_preview_card.css">3 Column Preview Card CSS</a></div>
 
                     </td>
                 </tr>
