--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
                         <div> <a href ="./frontend_mentor/css/stats_preview_card.css">Stats Preview Card CSS</a></div>
                         <div> <a href ="./frontend_mentor/css/three_column_preview_card.html">3 Column Preview Card</a></div>
                         <div> <a href ="./frontend_mentor/css/three_column_preview_card.css">3 Column Preview Card CSS</a></div>
+                        <div> <a href ="./frontend_mentor/css/huddle.html">Huddle</a></div>
+                        <div> <a href ="./frontend_mentor/css/huddle.css">Huddle CSS</a></div>
+
+
 
                     </td>
                 </tr>
