--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@
                         <div> <a href ="./frontend_mentor/css/three_column_preview_card.css">3 Column Preview Card CSS</a></div>
                         <div> <a href ="./frontend_mentor/css/huddle.html">Huddle</a></div>
                         <div> <a href ="./frontend_mentor/css/huddle.css">Huddle CSS</a></div>
+                        <div> <a href ="./frontend_mentor/css/single_price_grid.html">Single Price Grid Component</a></div>
+                        <div> <a href ="./frontend_mentor/css/single_price_grid.css">Single Price Grid Component CSS</a></div>
+
 
 
 
