--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div>
                             <a href="./src/menu-contact.html"> Menu Contact</a>
                         </div>
-                         <div>
+                        <div>
                             <a href="./src/menu-about.html"> Menu About</a>
                         </div>
                         <div>
@@ -144,39 +144,56 @@
                         </div>
                         <div>
                             <a href="./src/csslessons/page2.html">CSS Lessons:Page 2</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page3.html">CSS Lessons:Page 3</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page4.html">CSS Lessons:Page 4</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page5.html">CSS Lessons:Page 5</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page6.html">CSS Lessons:Page 6</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page7.html">CSS Lessons:Page 7</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page8.html">CSS Lessons:Page 8</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page9.html">CSS Lessons:Page 9</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page10.css">CSS Lessons:Page 10 css</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page11.html">CSS Lessons:Page 11</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page12.css">CSS Lessons:Page 12 css</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page13.html">CSS Lessons:Page 13</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page14.css">CSS Lessons:Page 14 css</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page15.html">CSS Lessons:Page 15</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page16.css">CSS Lessons:Page 16 css</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page17.html">CSS Lessons:Page 17</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page18.css">CSS Lessons:Page 18 css</a>
-                        </div><div>
+                        </div>
+                        <div>
                             <a href="./src/csslessons/page19.html">CSS Lessons:Page 19</a>
                         </div>
                         <div>
@@ -240,23 +257,35 @@
                             <a href="./frontend_mentor/css/clipboard.css">Clipboard Landing Page Master CSS</a>
                         </div>
                         <div>
-                        <a href="./frontend_mentor/css/chat.html">Chat App</a>
+                            <a href="./frontend_mentor/css/chat.html">Chat App</a>
                         </div>
                         <div>
                             <a href="./frontend_mentor/css/chat.css">Chat App CSS</a>
                         </div>
-                        <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.html">Huddle Landing Page With  Alternating Feature Blocks Master</a></div>
-                        <div> <a href ="./frontend_mentor/css/huddle_landing_blocks.css">Huddle Landing Page With  Alternating Feature Blocks Master  CSS</a></div>
-                        <div> <a href ="./frontend_mentor/css/huddle_landing_curve.html">Huddle Landing Page With  Alternating Feature Curve Master</a></div>
-                        <div> <a href ="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With  Alternating Feature Curve Master  CSS</a></div>
-                        <div> <a href ="./frontend_mentor/css/stats_preview_card.html">Stats Preview Card</a></div>
-                        <div> <a href ="./frontend_mentor/css/stats_preview_card.css">Stats Preview Card CSS</a></div>
-                        <div> <a href ="./frontend_mentor/css/three_column_preview_card.html">3 Column Preview Card</a></div>
-                        <div> <a href ="./frontend_mentor/css/three_column_preview_card.css">3 Column Preview Card CSS</a></div>
-                        <div> <a href ="./frontend_mentor/css/huddle.html">Huddle</a></div>
-                        <div> <a href ="./frontend_mentor/css/huddle.css">Huddle CSS</a></div>
-                        <div> <a href ="./frontend_mentor/css/single_price_grid.html">Single Price Grid Component</a></div>
-                        <div> <a href ="./frontend_mentor/css/single_price_grid.css">Single Price Grid Component CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/huddle_landing_blocks.html">Huddle Landing Page With
+                                Alternating Feature Blocks Master</a></div>
+                        <div> <a href="./frontend_mentor/css/huddle_landing_blocks.css">Huddle Landing Page With
+                                Alternating Feature Blocks Master CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/huddle_landing_curve.html">Huddle Landing Page With
+                                Alternating Feature Curve Master</a></div>
+                        <div> <a href="./frontend_mentor/css/huddle_landing_curve.css">Huddle Landing Page With
+                                Alternating Feature Curve Master CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/stats_preview_card.html">Stats Preview Card</a></div>
+                        <div> <a href="./frontend_mentor/css/stats_preview_card.css">Stats Preview Card CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/three_column_preview_card.html">3 Column Preview Card</a>
+                        </div>
+                        <div> <a href="./frontend_mentor/css/three_column_preview_card.css">3 Column Preview Card
+                                CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/huddle.html">Huddle</a></div>
+                        <div> <a href="./frontend_mentor/css/huddle.css">Huddle CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/single_price_grid.html">Single Price Grid Component</a>
+                        </div>
+                        <div> <a href="./frontend_mentor/css/single_price_grid.css">Single Price Grid Component CSS</a>
+                        </div>
+                        <div> <a href="./frontend_mentor/css/profile_card.css">Profile Card Component Main CSS</a></div>
+                        <div> <a href="./frontend_mentor/css/profile_card.html">Profile Card Component Main</a></div>
+                        <div> <a href="./frontend_mentor/js/base.html">Base Apparel coming soon</a></div>
+                        <div> <a href="./frontend_mentor/js/base.css">Base Apparel coming soon css</a></div>
 
 
 
