--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
                         <div> <a href="./frontend_mentor/css/profile_card.html">Profile Card Component Main</a></div>
                         <div> <a href="./frontend_mentor/js/base.html">Base Apparel coming soon</a></div>
                         <div> <a href="./frontend_mentor/js/base.css">Base Apparel coming soon css</a></div>
+                        <div> <a href="./frontend_mentor/js/article.css">Article Preview Component Master css</a></div>
+                        <div> <a href="./frontend_mentor/js/article.html">Article Preview Component Master</a></div>
+                        <div> <a href="./frontend_mentor/js/share.html">Share</a></div>
 
 
 
